--- a/res/layout/question_activity.xml
+++ b/res/layout/question_activity.xml
@@ -5,5 +5,10 @@
     android:id="@+id/question_container"
     android:orientation="vertical" >
     
-
+	<android.support.v4.view.ViewPager
+	    android:id="@+id/question_viewpager"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	/>
+    
 </LinearLayout>
