--- a/res/layout/main_activity.xml
+++ b/res/layout/main_activity.xml
@@ -5,12 +5,19 @@
     android:orientation="vertical" 
     android:gravity="center_horizontal">
 
-    <GridView
-        android:id="@+id/main_grid"
+    <!-- GridView
+        android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:listSelector="#00000000" />
+        android:listSelector="#00000000" /-->
     
+        <ListView
+
+      android:id="@+id/main_list_view"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      />
+        
 </LinearLayout>
 
