--- a/res/layout/question_main.xml
+++ b/res/layout/question_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="12dp" >
     <ImageView
         android:id="@+id/question_single_or_multi" 
         android:layout_width="wrap_content"
@@ -14,6 +15,8 @@
         android:id="@+id/question_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/question_main_font"
+        android:lineSpacingMultiplier="1.2"        
         />
 
     <com.houfubao.doctor.view.QuestionOptionView 
