--- a/res/layout/question_main_view.xml
+++ b/res/layout/question_main_view.xml
@@ -21,7 +21,7 @@
 
     <com.houfubao.doctor.view.QuestionOptionView 
         android:id="@+id/question_option"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     
