--- a/res/layout/question_option.xml
+++ b/res/layout/question_option.xml
@@ -6,5 +6,6 @@
     android:paddingLeft="@dimen/option_first_indent"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
+    android:background="@drawable/option_backgroud_selector"
      />
     
