--- a/res/layout/question_option.xml
+++ b/res/layout/question_option.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="@dimen/question_option_fontsize"
-    android:paddingLeft="@dimen/option_first_indent"
-    android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:background="@drawable/option_backgroud_selector"
-     />
-    
+    android:paddingLeft="@dimen/option_first_indent"
+    android:paddingTop="12dp" >
+
+    <ImageView
+        android:id="@+id/option_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:contentDescription="@null" 
+        />
+
+    <TextView
+        android:id="@+id/option_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/option_image"
+        android:background="@drawable/option_backgroud_selector"
+        android:textSize="@dimen/question_option_fontsize" />
+
+</RelativeLayout>
