--- a/res/layout/main_app_item.xml
+++ b/res/layout/main_app_item.xml
@@ -2,14 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/game_tile_info"
-    android:gravity="center"
-    android:layout_width="wrap_content"
+    android:padding="6dp"
+    android:background="@color/white"
+    android:layout_gravity="center_horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/app_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:drawablePadding="20dp"
+        android:layout_centerHorizontal="true"
         android:ellipsize="end"/>
 
     <TextView
@@ -17,6 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/app_text"
+        android:layout_marginTop="10dp"
+        android:layout_centerHorizontal="true"
         android:ellipsize="end"/>
 
 </RelativeLayout>
