--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -4,6 +4,10 @@
     <!-- multi -->
     <color name="question_option">#FF000000</color>
     <color name="question_option_background">#FFE0E0E0</color>
+    
+    <!-- first fragment -->
+    <color name="gray">#FFF2F2F2</color>
+    <color name="white">#ffffffff</color>
         
     <color name="background_tab_pressed">#6633B5E5</color>
     <color name="red">#E43F3E</color>
