[增加多选题显示方式]

--- a/res/layout/question_main_view.xml
+++ b/res/layout/question_main_view.xml
@@ -21,6 +21,14 @@
         android:orientation="vertical"
         />
     
+    <Button 
+        android:id="@+id/question_multi_confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/question_multi_confirm"
+        android:visibility="gone"
+        />
+    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
