调整主页的显示

--- a/res/layout/main_app_item.xml
+++ b/res/layout/main_app_item.xml
@@ -2,7 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/game_tile_info"
-    android:padding="6dp"
+    android:paddingTop="24dp"
+    android:paddingBottom="24dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:background="@color/white"
     android:layout_gravity="center_horizontal"
     android:layout_width="match_parent"
@@ -13,15 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="20dp"
-        android:layout_centerHorizontal="true"
-        android:ellipsize="end"/>
-
-    <TextView
-        android:id="@+id/question_count"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/app_text"
-        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:ellipsize="end"/>
 
