--- a/res/layout/first_fragment.xml
+++ b/res/layout/first_fragment.xml
@@ -6,16 +6,16 @@
     android:background="@color/gray"
     android:gravity="center_horizontal">
 
-    <GridView
+    <LinearLayout
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:numColumns="4"
+   		android:orientation="vertical" 
         android:verticalSpacing="1dp"
         android:horizontalSpacing="1dp"
         android:dividerHeight="1dp"
        	android:layout_marginTop="16dp"
-        android:listSelector="#00000000" />
+        android:background="#00000000" />
     
    <LinearLayout 
        android:layout_width="match_parent"
