--- a/res/layout/first_fragment.xml
+++ b/res/layout/first_fragment.xml
@@ -11,10 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
    		android:orientation="vertical" 
-        android:verticalSpacing="1dp"
-        android:horizontalSpacing="1dp"
-        android:dividerHeight="1dp"
-       	android:layout_marginTop="16dp"
         android:background="#00000000" />
     
    <LinearLayout 
@@ -25,23 +21,16 @@
        >
        <TextView 
            android:id="@+id/my_error_question"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:text="@string/my_error_question"
-           android:padding="20dp"
-           android:layout_weight="0.5"
-           android:background="@color/white"
+		   style="@style/main_myitem_style"
+           android:drawableLeft="@drawable/rectangle_red"
+           android:text="@string/my_collection_question"
            />
    	    
        <TextView 
            android:id="@+id/my_collection_question"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="0.5"
-           android:padding="20dp"
-           android:layout_marginLeft="1dp"
-           android:text="@string/my_collection_question"
-           android:background="@color/white"
+		   style="@style/main_myitem_style"
+           android:drawableLeft="@drawable/rectangle_green"
+           android:text="@string/my_error_question"
            />
    </LinearLayout >
    
