--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -38,4 +38,15 @@
         <item name="apTabTextSelectColor">@color/home_bar_text_push</item>
     </style>
     
+    <style name="main_myitem_style">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:paddingTop">@dimen/main_myitem_padding</item>
+        <item name="android:paddingBottom">@dimen/main_myitem_padding</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_weight">0.5</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:textSize">@dimen/main_myitem_text_size</item>
+    </style>
+    
 </resources>
