--- a/res/layout/first_fragment.xml
+++ b/res/layout/first_fragment.xml
@@ -10,14 +10,17 @@
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-   		android:orientation="vertical" 
-        android:background="#00000000" />
+        android:paddingLeft="@dimen/margin_padding_size"
+        android:paddingRight="@dimen/margin_padding_size"
+   		android:orientation="vertical" />
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
-       android:layout_marginTop="16dp"
+       android:layout_marginTop="8dp"
+       android:paddingLeft="@dimen/margin_padding_size"
+       android:paddingRight="@dimen/margin_padding_size"
        >
        <TextView 
            android:id="@+id/my_error_question"
@@ -28,6 +31,7 @@
    	    
        <TextView 
            android:id="@+id/my_collection_question"
+           android:layout_marginLeft="2dp"
 		   style="@style/main_myitem_style"
            android:drawableLeft="@drawable/rectangle_green"
            android:text="@string/my_error_question"
