--- a/res/layout/first_fragment.xml
+++ b/res/layout/first_fragment.xml
@@ -25,7 +25,7 @@
        <TextView 
            android:id="@+id/my_error_question"
 		   style="@style/main_myitem_style"
-           android:drawableLeft="@drawable/rectangle_red"
+           android:drawableTop="@drawable/media__microphone_delete"
            android:text="@string/my_collection_question"
            />
    	    
@@ -33,7 +33,8 @@
            android:id="@+id/my_collection_question"
            android:layout_marginLeft="2dp"
 		   style="@style/main_myitem_style"
-           android:drawableLeft="@drawable/rectangle_green"
+           android:drawableTop="@drawable/media__microphone_delete"
+           android:drawablePadding="4dp"
            android:text="@string/my_error_question"
            />
    </LinearLayout >
