--- a/res/layout/question_activity.xml
+++ b/res/layout/question_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/question_container"
@@ -11,4 +11,11 @@
 	    android:layout_height="wrap_content"
 	/>
     
-</LinearLayout>
+	<com.houfubao.doctor.view.question_index_view
+	    android:id="@+id/question_index"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content" 
+	    android:layout_alignParentBottom="true"
+	    />
+	
+</RelativeLayout>
