--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,27 +2,34 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
+
+        <!-- All customizations that are NOT specific to a particular API-level can go here. 
+        <item name="android:windowAnimationStyle">@style/AnimationActivity</item>-->
     </style>
 
-    
+    <style name="AnimationActivity" mce_bogus="1" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_left_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_right_out</item>
+    </style>
+
     <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium">
         <item name="android:typeface">monospace</item>
     </style>
-    
-    
+
     <style name="pagertab_icon_style">
         <item name="android:background">@drawable/tab_bg_normal</item>
         <item name="apTabBackground">@drawable/tab_bg_normal</item>
@@ -37,7 +44,7 @@
         <item name="apTabPaddingTopBottom">6dp</item>
         <item name="apTabTextSelectColor">@color/home_bar_text_push</item>
     </style>
-    
+
     <style name="main_myitem_style">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">0dp</item>
@@ -48,5 +55,5 @@
         <item name="android:background">@color/white</item>
         <item name="android:textSize">@dimen/main_myitem_text_size</item>
     </style>
-    
+
 </resources>
